style.css
:root{
    --light : #def ;
    --med : #456 ;
    --dark : #234 ;
    --textLight : whitesmoke ;
    --textDark : #456 ;
    --gray : #9ab ;
    --form : #484865
}

*{
    box-sizing: border-box;
    /* font-family: 'Jost'; */
    font-family: 'MuseoModerno';
}

h1 , p , h2 , ul {
    margin: 0;
    padding: 0;
}

body{
    margin: 0;
    height: 100vh;
    background-color: #a994a7 ;
    display: flex;
    align-items: center;
    justify-content: center;
}

body > .todo-task-cover{
    display: none;
}

.cover{
    background-color: var(--light) ;
    height: 100vh;
    max-height: 100vh;
    border-radius: 1rem;
    width: 350px;
    position: relative;
    display: flex;
    flex-direction: column;
    /* overflow: auto; */
    /* overflow-y: scroll; */
}

.calCover {
    padding: 0.5rem ;
}

.calendar-card{
    box-shadow: none;
    background-color: transparent ;
}

.headingCover{
    padding: 0.5rem 0.8rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    /* display: none; */
}

.headingCover.none{
    display: none;
}

.heading-title{
    color: var(--textDark) ;
}

.todoCover {
    width: 100%;
    flex-grow: 1;
    background-color: var(--med) ;
    border-radius: 1rem;
    overflow: auto ;
    position: relative;
}

.todoTaskScreen {
    height: 100% ;
    border-radius: 1rem;
    overflow-y: scroll;
    padding: 1rem;
    padding-bottom: 4rem ;
}

.todoDarkScreen {
    z-index: 4;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(112, 128, 144, 0.514);
    border-radius: 1rem;
    opacity: 0;
    visibility: hidden;
}

.todoDarkScreen.show {
    opacity: 1;
    visibility: visible;
}

.addTaskScreen {
    position: absolute;
    z-index: 5;
    width: 100%;
    height: 100%;
    border-radius: 1rem;
    background-color: #263238 ;
    background-color: var(--form);
    bottom: 0;
    left: 0;
    overflow: scroll ;
    padding-bottom: 4rem;
    transform-origin: bottom;
    transition: transform 0.4s ease ;
}

.addTaskScreen.shrink {
    transform: scaleY(0) ;
}

.addTaskScreen::-webkit-scrollbar , .todoTaskScreen::-webkit-scrollbar {
    display: none;
}

.addTaskForm {
    padding: 1.5rem;
    opacity: 1;
    transition: opacity 0.3s ease ;
}

.shrink > .addTaskForm {
    opacity: 0;
}

.addTaskForm > form > div p {
    color: var(--textLight) ;
    margin: 0.5rem 0;
}

.add-timings{
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.add-timings > input {
    font-family: 'MuseoModerno';
    padding: 0.5rem;
    border-radius: 0.25rem;
    border: none;
    outline: none;
}

input[type="time"]{
    color: whitesmoke;
    background: transparent;
    border: 1px solid #567;
}

.add-date , .select-date {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.select-date{
    flex-grow: 1;
    padding-left: 2rem;
}

#editSelectedDate {
    cursor: pointer;
    color: var(--textLight);
}

.add-title > input , .add-detail > textarea {
    width: 100% ;
    padding: 0.5rem 0.75rem;
    border-radius: 0.5rem;
    border: none;
    outline: none;
}

.add-title > input:focus , .add-detail > textarea:focus {
    outline: none;
}

.addTaskForm > form > div {
    padding: 0.1px;
    margin-bottom : 0.5rem ;
}

.heading-setting {
    width: 36px;
    height: 36px;
    padding: 0.25rem;
    cursor: pointer;
}

.heading-setting > img {
    width: 100%;
    height: 100%;
    display: block;
    pointer-events: none;
}


.todoHead {
    padding: 0rem 1rem ;
    color: var(--textLight) ;
}

.todo-tasks{
    margin-top: 1rem;
    padding: 0.1px ;
    flex-grow: 1;
    color: var(--textLight) ;
}

.todo-task-cover{
    position: relative;
    margin-bottom: 1rem;
}

.todo-task{
    position: relative;
    padding: 1rem;
    border-radius: 1rem;
    /* border: 1px solid whitesmoke; */
    background-color: var(--med) ;
    z-index: 2;
    transition: transform 0.4s cubic-bezier(0.02, 0.6, 0.51, 1.56) ;
}

.todo-task.shift{
    transform: translateX(-70px);
}

.td-title{
    margin-bottom: 0.5rem;
}

.td-time {
    display: flex;
    font-size: 0.5rem;
}
.td-time > * {
    font-family: 'Jost';
}

.td-icons {
    height: 100%;
    position: absolute;
    right: 12px ;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding: 0 0.5rem;
}

.td-delete , .td-edit {
    width: 24px;
    height: 24px;
    cursor: pointer;
}

.td-delete > img , .td-edit > img {
    width: 100%;
    height: 100%;
    pointer-events: none;
}

#timeSelectP.invalid{
    color: red;
}

.td-more{
    position: absolute;
    top: 50% ;
    right: 15px;
    height: 50%;
    width: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center ;
    align-items: center ;
    transform: translateY(-50%);
    cursor: pointer;
}

.td-more > * {   
    pointer-events: none;
}
.td-m{
    height: 5px;
    width: 40px;
    margin: 4px 0;
    background-color: var(--textLight) ;
    border-radius: 2rem;
    transform-origin: left;
    transition: width 0.3s ease ;
}

.td-m.short{
    width: 5px;
}

.tdma{
    transform: translateY(-7.5px) rotate(45deg);
}

.tdmb{
    transform: translateY(+7.5px) rotate(-45deg);
}


#addTaskBtn , #addTaskDoneBtn {
    height: 50px;
    width: 50px;
    position: absolute ;
    bottom: 1rem;
    border-radius: 2rem;
    padding: 0.75rem;
    cursor: pointer;    
    z-index: 5;
    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.466);
}

#addTaskBtn {
    background-color: #cde ;
    right: 1rem;
    z-index: 6;
    transition: transform 0.3s ease , background 0.3s ease ;
}

#addTaskBtn.shrink {
    background-color: indianred ;
    transform : rotate(45deg) ;
}

#addTaskBtn > svg , #addTaskDoneBtn > svg  {
    width: 100%;
    height: 100%;
}

#addTaskBtn #addTaskSvg , #addTaskDoneBtn #addTaskDoneBtnSvg {
    fill: var(--dark) ;
}

#addTaskDoneBtn{
    left: 1rem;
    right: auto;
    background-color: green;
    transition: left 0.4s ease , opacity 0.3s ease , background-color 0.3s ease ;
}

#addTaskDoneBtn.shrink {
    background-color: #abc ;
    left: calc(100% - 50px - 1rem ) ;    
    opacity: 0;
}

@media(max-width : 500px){
    .cover , .todoDarkScreen {
        width: 100%;
        border-radius: 0;
    }   

    .todoTaskScreen , .addTaskScreen , .todoCover {
        border-radius: 1.5rem 1.5rem 0 0;
    }
}

